--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <a class="menuLink" href="#skills">skills</a>
                 <a class="menuLink" href="#services">services</a>
                 <a class="menuLink" href="#portfolio">portfolio</a>
+                <a class="menuLink" href="./pages/resume.html">resume</a>
                 <a class="menuLink" href="#contact">contacts</a>
                 <i class="bx bx-sun"></i>
             </div>
@@ -89,7 +90,7 @@
                 <p>projects</p>
             </div>
             <div class="stat">
-                <h1 class="stat-counter">5+</h1>
+                <h1 class="stat-counter">4+</h1>
                 <p>Happy</p>
                 <p>companies</p>
             </div>
