--- a/artside/gallery.html
+++ b/artside/gallery.html
@@ -123,7 +123,7 @@
 					<div class="grid-item album-item">
 						<a href="gallery-single.html">
 							<div class="album-thumb">
-								<img src="./images/works/authenticity1.JPEG" data-src="images/frame-album-1.jpg" class="" alt="authenticity1">
+								<img src="./images/works/authenticity1.jpg" data-src="images/frame-album-1.jpg" class="" alt="authenticity1">
 							</div>
 							<div class="album-name">Authenticity I</div>
 							<div class="album-desc">
