--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
 	<!-- SEO BALISES  -->
-	<title>Kabeya Ilunga Afrocentric Visual Artist</title>
+	<title>Kabeya Ilunga | Congolese Visual Artist</title>
 	<meta name="description" content="Explore the world of Kabeya Ilunga, a Congolese hyperrealist artist blending African culture and modernity. Powerful portraits, Multi exhibitions, and a social mission.">
 	
 	<!-- Open Graph (Facebook, LinkedIn, etc.) -->
@@ -22,6 +23,23 @@
 	<meta name="twitter:image" content="https://www.kabeyailunga.com/assets/preview.jpg">
 	
 	<!-- SEO BALISES  -->
+	<!-- 	informer google que je suis un artiste  -->
+	<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Kabeya Ilunga",
+  "image": "https://www.kabeyailunga.com/images/frame-about1.webp",
+  "jobTitle": "Artiste hyperréaliste afrocentrique congolais",
+  "url": "https://www.kabeyailunga.com",
+  "sameAs": [
+    "https://www.instagram.com/kabeya_ilunga",
+    "https://www.linkedin.com/in/kabeya-ilunga/"
+  ]
+}
+</script>
+
+<!-- 	informer google que je suis un artiste  -->
 
 	<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 	<link rel="icon" href="images/favicon.png" type="image/x-icon">
