--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 	<meta name="description" content="Explore the world of Kabeya Ilunga, a Congolese hyperrealist artist blending African culture and modernity. Powerful portraits, Multi exhibitions, and a social mission.">
 	
 	<!-- Open Graph (Facebook, LinkedIn, etc.) -->
-	<meta property="og:title" content="Kabeya Ilunga | Afrocentric Hyperrealist Artist">
+	<meta property="og:title" content="Kabeya Ilunga | Congolese visual Artist">
 	<meta property="og:description" content="Discover the art of Kabeya Ilunga, where African traditions meet contemporary expression.">
-	<meta property="og:image" content="https://www.kabeyailunga.com/assets/preview.jpg">
+	<meta property="og:image" content="https://www.kabeyailunga.com/images/frame-about1.webp">
 	<meta property="og:url" content="https://www.kabeyailunga.com">
 	<meta property="og:type" content="website">
 	
 	<!-- Twitter -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="Kabeya Ilunga | Afrocentric Hyperrealist Artist">
+	<meta name="twitter:title" content="Kabeya Ilunga | Congolese visual Artist">
 	<meta name="twitter:description" content="Explore the visual and cultural universe of Kabeya Ilunga.">
-	<meta name="twitter:image" content="https://www.kabeyailunga.com/assets/preview.jpg">
+	<meta name="twitter:image" content="https://www.kabeyailunga.com/images/frame-about1.webp">
 	
 	<!-- SEO BALISES  -->
 	<!-- 	informer google que je suis un artiste  -->
