--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<!-- Open Graph (Facebook, LinkedIn, etc.) -->
 	<meta property="og:title" content="Kabeya Ilunga | Congolese visual Artist">
 	<meta property="og:description" content="Discover the art of Kabeya Ilunga, where African traditions meet contemporary expression.">
-	<meta property="og:image" content="https://www.kabeyailunga.com/images/frame-about1.webp">
+	<meta property="og:image" content="https://www.kabeyailunga.com/images/works/authenticity1.webp">
 	<meta property="og:url" content="https://www.kabeyailunga.com">
 	<meta property="og:type" content="website">
 	
@@ -31,7 +31,7 @@
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="Kabeya Ilunga | Congolese visual Artist">
 	<meta name="twitter:description" content="Explore the visual and cultural universe of Kabeya Ilunga.">
-	<meta name="twitter:image" content="https://www.kabeyailunga.com/images/frame-about1.webp">
+	<meta name="twitter:image" content="https://www.kabeyailunga.com/images/works/authenticity1.webp">
 	
 	<!-- SEO BALISES  -->
 	<!-- 	informer google que je suis un artiste  -->
@@ -94,7 +94,7 @@
 					<span class="menu-contacts__icon">
 						<i class="fa fa-envelope"></i>
 					</span>
-					<p>kabeyailunga243@icloud.com</p>
+					<p>studio@kabeyailunga.com</p>
 				</a>
 
 				<div class="menu-social">
