--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
 					<span class="menu-contacts__icon">
 						<i class="fa fa-envelope"></i>
 					</span>
-					<p>kabeyailunga243@icloud.com</p>
+					<p>studio@kabeyailunga.com</p>
 				</a>
 
 				<div class="menu-social">
@@ -97,9 +97,9 @@
 					<div class="left">
 						<form id="contact-form">
 							<!-- Hidden Required Fields -->
-							<input type="hidden" name="project_name" value="Sylvia">
-							<input type="hidden" name="admin_email" value="kabeyailunga243@icloud.com">
-							<input type="hidden" name="email_from" value="kabeyailunga.com">
+							<input type="hidden" name="project_name" value="kabeyailunga">
+							<input type="hidden" name="admin_email" value="studio@kabeyailunga.com">
+							<input type="hidden" name="email_from" value="">
 							<input type="hidden" name="form_subject" value="New email from the site kabeya ilunga">
 							<!-- END Hidden Required Fields -->
 
@@ -146,7 +146,7 @@
 								</span>
 								<div class="contact-info-text">
 									<h5 class="contact-info-title">Email</h5>
-									<div class="contact-info-val">kabeyailunga243@icloud.com</div>
+									<div class="contact-info-val">studio@kabeyailunga.com</div>
 								</div>
 							</a>
 							<div class="contact-info-item wow animate__fadeInRight" data-wow-delay="0.6s">
