--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
 					<span class="menu-contacts__icon">
 						<i class="fa fa-envelope"></i>
 					</span>
-					<p>kabeyailunga243@icloud.com</p>
+					<p>studio@kabeyailunga.com</p>
 				</a>
 
 				<div class="menu-social">
