--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   "@type": "Person",
   "name": "Kabeya Ilunga",
   "image": "https://www.kabeyailunga.com/images/frame-about1.webp",
-  "jobTitle": "Artiste hyperréaliste afrocentrique congolais",
+  "jobTitle": "Artiste visuel congolais",
   "url": "https://www.kabeyailunga.com",
   "sameAs": [
     "https://www.instagram.com/kabeya_ilunga",
@@ -52,8 +52,8 @@
 
 <!-- 	informer google que je suis un artiste  -->
 
-	<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-	<link rel="icon" href="images/favicon.png" type="image/x-icon">
+	<link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
+	<link rel="icon" href=./"images/favicon.png" type="image/x-icon">
 
 	<link rel="stylesheet" href="css/swiper-bundle.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
