Update index.html favicon

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <!-- 	informer google que je suis un artiste  -->
 
 	<link rel="shortcut icon" href="./images/favicon.png" type="image/png">
-	<link rel="icon" href=./"images/favicon.png" type="image/png">
+	<link rel="icon" href="./images/favicon.png" type="image/png">
 
 	<link rel="stylesheet" href="css/swiper-bundle.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
