--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <!-- 	balises google analytics  -->
 	<!-- Google tag (gtag.js) -->
-<script async src="https://ww.googletagmanager.com/gtag/js?id=G-JLCZ047PFZ"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JLCZ047PFZ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -17,11 +17,11 @@
 <!-- 	balises google analytics  -->
 
 	<!-- SEO BALISES  -->
-	<title>Kabeya Ilunga | Congolese Visual Artist</title>
+	<title>Kabeya Ilunga - Congolese Visual Artist</title>
 	<meta name="description" content="Explore the world of Kabeya Ilunga, a Congolese hyperrealist artist blending African culture and modernity. Powerful portraits, Multi exhibitions, and a social mission.">
 	
 	<!-- Open Graph (Facebook, LinkedIn, etc.) -->
-	<meta property="og:title" content="Kabeya Ilunga | Congolese visual Artist">
+	<meta property="og:title" content="Kabeya Ilunga - Congolese visual Artist">
 	<meta property="og:description" content="Discover the art of Kabeya Ilunga, where African traditions meet contemporary expression.">
 	<meta property="og:image" content="https://www.kabeyailunga.com/images/works/authenticity1.webp">
 	<meta property="og:url" content="https://www.kabeyailunga.com">
@@ -29,7 +29,7 @@
 	
 	<!-- Twitter -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="Kabeya Ilunga | Congolese visual Artist">
+	<meta name="twitter:title" content="Kabeya Ilunga - Congolese visual Artist">
 	<meta name="twitter:description" content="Explore the visual and cultural universe of Kabeya Ilunga.">
 	<meta name="twitter:image" content="https://www.kabeyailunga.com/images/works/authenticity1.webp">
 	
@@ -90,7 +90,7 @@
 					<p>+243 975072724</p>
 				</a>
 
-				<a href="index.html" class="menu-contacts__item">
+				<a href="mailto:studio@kabeyailunga.com" class="menu-contacts__item">
 					<span class="menu-contacts__icon">
 						<i class="fa fa-envelope"></i>
 					</span>
