--- a/gallery-single.html
+++ b/gallery-single.html
@@ -7,8 +7,8 @@
 
 	<title>Kabeya | AFROCENTRIK</title>
 
-	<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-	<link rel="icon" href="images/favicon.png" type="image/x-icon">
+	<link rel="shortcut icon" href="images/favicon.png" type="image/png">
+	<link rel="icon" href="images/favicon.png" type="image/png">
 
 	<link rel="stylesheet" href="css/swiper-bundle.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
@@ -45,7 +45,7 @@
 					<p>+243975072724</p>
 				</a>
 
-				<a href="index.html" class="menu-contacts__item">
+				<a href="mailto:studio@kabeyailunga.com" class="menu-contacts__item">
 					<span class="menu-contacts__icon">
 						<i class="fa fa-envelope"></i>
 					</span>
