--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,31 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Kabeya | contact</title>
+	<title>Kabeya | Contact</title>
 
-	<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-	<link rel="icon" href="images/favicon.png" type="image/x-icon">
+	<!-- SEO -->
+	<meta name="description" content="Get in touch with Kabeya Ilunga, an afrocentric hyperrealist artist based in East Africa. 
+		Available for collaborations, exhibitions, and commissions.">
+	<meta name="author" content="Kabeya Ilunga">
+	<meta name="robots" content="index, follow">
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:title" content="Contact | Kabeya Ilunga">
+	<meta property="og:description" content="Interested in working together or have a question? Reach out to me here.">
+	<meta property="og:image" content="https://www.kabeyailunga.com/images/frame-about1.webp">
+	<meta property="og:url" content="https://www.kabeyailunga.com/contact.html">
+	<meta property="og:type" content="website">
+
+	<!-- Twitter Card -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="Contact | Kabeya Ilunga">
+	<meta name="twitter:description" content="Interested in working together or have a question? Reach out to me here.">
+	<meta name="twitter:image" content="https://www.kabeyailunga.com/images/frame-about1.webp">
+
+	<link rel="shortcut icon" href="images/favicon.png" type="image/png">
+	<link rel="icon" href="images/favicon.png" type="image/png">
 
 	<link rel="stylesheet" href="css/swiper-bundle.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
@@ -38,14 +57,14 @@
 			</ul>
 
 			<div class="menu-contacts">
-				<a href="index.html" class="menu-contacts__item">
+				<a href="tel:+243975072724" class="menu-contacts__item">
 					<span class="menu-contacts__icon">
 						<i class="fa fa-phone-square"></i>
 					</span>
 					<p>+243975072724</p>
 				</a>
 
-				<a href="index.html" class="menu-contacts__item">
+				<a href="mailto:studio@kabeyailunga.com" class="menu-contacts__item">
 					<span class="menu-contacts__icon">
 						<i class="fa fa-envelope"></i>
 					</span>
@@ -53,14 +72,14 @@
 				</a>
 
 				<div class="menu-social">
-					<a href="https://www.instagram.com/ilunga_kabeya/" target="_blank" class="menu-social__item">
+					<a href="https://www.instagram.com/ilunga_kabeya/" target="_blank" class="menu-social__item" rel="noopener noreferrer">
 						<i class="fa fa-instagram"></i>
 					</a>
-					<a href="https://wa.me/+243975072724" target="_blank" class="menu-social__item">
+					<a href="https://wa.me/+243975072724" target="_blank" class="menu-social__item" rel="noopener noreferrer">
 						<i class="fa fa-whatsapp"></i>
 					</a>
 
-					<a href="https://www.linkedin.com/in/kabeya-ilunga/" target="_blank" class="menu-social__item">
+					<a href="https://www.linkedin.com/in/kabeya-ilunga/" target="_blank" class="menu-social__item" rel="noopener noreferrer">
 						<i class="fa fa-linkedin"></i>
 					</a>
 				</div>
@@ -68,6 +87,7 @@
 			<div class="menu-close__wrap">
 				<a href="#" class="menu-close"><img style="transform: rotate(180deg);" src="images/arrow-right.svg" alt=""></a>
 			</div>
+			
 		</nav>
 	</div>
 
