--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
 	</div>
 
 	<a href="index.html" class="logo">
-		<img src="images/logo.png" alt="">
+		<img src="images/logo.png" alt="kabeya ilunga logo">
 	</a>
 
 	<a href="#" class="hamburger-button">
@@ -151,7 +151,7 @@
 
 					<div class="right">
 						<div class="contact-info">
-							<a href="tel:+3704418614" class="contact-info-item wow animate__fadeInRight" data-wow-delay="0.1s">
+							<a href="tel:+243975072724" class="contact-info-item wow animate__fadeInRight" data-wow-delay="0.1s">
 								<span class="contact-info-icon">
 									<i class="fa fa-phone-square"></i>
 								</span>
@@ -182,15 +182,15 @@
 							<div class="contact-social">
 								<h4 class="contact-social-title wow animate__fadeInRight" data-wow-delay="1.1s">I'm on social networks</h4>
 								<div class="contact-social-row">
-									<a href="https://www.instagram.com/ilunga_kabeya/l" target="_blank" class="wow animate__fadeInUp" data-wow-delay="1.2s">
+									<a href="https://www.instagram.com/ilunga_kabeya/l" target="_blank" class="wow animate__fadeInUp" data-wow-delay="1.2s"  rel="noopener noreferrer">
 										<i class="fa fa-instagram"></i>
 									</a>
 
-									<a href="https://wa.me/+243975072724" target="_blank" class="wow animate__fadeInUp" data-wow-delay="1.4s">
+									<a href="https://wa.me/+243975072724" target="_blank" class="wow animate__fadeInUp" data-wow-delay="1.4s"  rel="noopener noreferrer">
 										<i class="fa fa-whatsapp"></i>
 									</a>
 
-									<a href="https://www.linkedin.com/in/kabeya-ilunga/" target="_blank" class="wow animate__fadeInUp" data-wow-delay="1.6s">
+									<a href="https://www.linkedin.com/in/kabeya-ilunga/" target="_blank" class="wow animate__fadeInUp" data-wow-delay="1.6s"  rel="noopener noreferrer">
 										<i class="fa fa-linkedin"></i>
 									</a>
 
