--- a/contact.html
+++ b/contact.html
@@ -115,38 +115,43 @@
 				
 				<div class="contact-row">
 					<div class="left">
-						<form id="contact-form">
-							<!-- Hidden Required Fields -->
-							<input type="hidden" name="project_name" value="kabeyailunga">
-							<input type="hidden" name="admin_email" value="studio@kabeyailunga.com">
-							<input type="hidden" name="email_from" value="">
-							<input type="hidden" name="form_subject" value="New email from the site kabeya ilunga">
-							<!-- END Hidden Required Fields -->
+<!-- 						formulaire ajoute  -->
+						<form id="contact-form" method="POST" action="mail.php">
+	<!-- Hidden Required Fields -->
+	<input type="hidden" name="project_name" value="kabeyailunga">
+	<input type="hidden" name="admin_email" value="studio@kabeyailunga.com">
+	<input type="hidden" name="email_from" value="noreply@kabeyailunga.com">
+	<input type="hidden" name="form_subject" value="New email from the site kabeya ilunga">
+	<!-- END Hidden Required Fields -->
 
-							<div class="input-field wow animate__fadeIn" tabindex="1" data-wow-delay="0.3s">
-								<input name="Name" type="text" id="contact-name" maxlength="50" required>
-								<label for="contact-name">Name</label>
-							</div>
+	<div class="input-field wow animate__fadeIn" tabindex="1" data-wow-delay="0.3s">
+		<input name="Name" type="text" id="contact-name" maxlength="50" required>
+		<label for="contact-name">Name</label>
+	</div>
 
-							<div class="input-field wow animate__fadeIn" tabindex="1" data-wow-delay="0.5s">
-								<input name="Email" type="text" id="contact-email" maxlength="50">
-								<label for="contact-email">E-mail</label>
-							</div>
+	<div class="input-field wow animate__fadeIn" tabindex="1" data-wow-delay="0.5s">
+		<input name="E-mail" type="email" id="contact-email" maxlength="50" required>
+		<label for="contact-email">E-mail</label>
+	</div>
 
-							<div class="input-field wow animate__fadeIn" tabindex="1" data-wow-delay="0.5s">
-								<input name="Phone" type="text" id="contact-phone" autocomplete="tel" required>
-								<label for="contact-email">Phone</label>
-							</div>
+	<div class="input-field wow animate__fadeIn" tabindex="1" data-wow-delay="0.5s">
+		<input name="Phone" type="text" id="contact-phone" autocomplete="tel" required>
+		<label for="contact-phone">Phone</label>
+	</div>
 
-							<div class="input-field wow animate__fadeIn" tabindex="1" data-wow-delay="0.7s">
-								<textarea name="Message" id="contact-message" cols="30" rows="7"></textarea>
-								<label for="contact-message">Message</label>
-							</div>
+	<div class="input-field wow animate__fadeIn" tabindex="1" data-wow-delay="0.7s">
+		<textarea name="Message" id="contact-message" cols="30" rows="7" required></textarea>
+		<label for="contact-message">Message</label>
+	</div>
 
-							<div class="button-field wow animate__fadeInUp" data-wow-delay="0.9s">
-								<button type="submit">Send</button>
-							</div>
-						</form>
+	<div class="button-field wow animate__fadeInUp" data-wow-delay="0.9s">
+		<button type="submit">Send</button>
+	</div>
+
+	<div id="form-status" class="wow animate__fadeInUp" data-wow-delay="1.1s" style="margin-top: 1rem;"></div>
+</form>
+
+<!-- 						formulaire ajoute  -->
 					</div>
 
 					<div class="right">
@@ -223,5 +228,36 @@
 <script src="js/blazy.min.js"></script>
 <script src="js/parazoom.min.js"></script>
 <script src="js/script.js"></script>
+
+<!-- 	script ajax email  -->
+	<script>
+document.getElementById("contact-form").addEventListener("submit", async function (e) {
+	e.preventDefault();
+
+	const form = e.target;
+	const formData = new FormData(form);
+	const status = document.getElementById("form-status");
+
+	status.innerText = "Sending...";
+
+	try {
+		const response = await fetch(form.action, {
+			method: form.method,
+			body: formData
+		});
+
+		if (response.ok) {
+			status.innerText = "Thank you! Your message has been sent.";
+			form.reset();
+		} else {
+			status.innerText = "Oops! Something went wrong. Please try again later.";
+		}
+	} catch (error) {
+		status.innerText = "Error sending message. Check your internet connection.";
+	}
+});
+</script>
+
+<!-- 	script ajax email  -->
 </body>
 </html>
