--- a/contact.html
+++ b/contact.html
@@ -241,7 +241,7 @@ document.getElementById("contact-form").addEventListener("submit", async functio
 			status.innerText = "Thank you! Your message has been sent.";
 			form.reset();
 		} else {
-			status.innerText = "Oops! Something went wrong. Please try again later.";
+			status.innerText = "Oops! Something went wrong. Please try again later or send directly a email.";
 		}
 	} catch (error) {
 		status.innerText = "Error sending message. Check your internet connection.";
