premier maj via git push

--- a/index.html
+++ b/index.html
@@ -4,56 +4,30 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<!-- 	balises google analytics  -->
-	<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JLCZ047PFZ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-JLCZ047PFZ');
-</script>
-<!-- 	balises google analytics  -->
+	<title>Kabeya | Gallery</title>
 
-	<!-- SEO BALISES  -->
-	<title>Kabeya Ilunga - Congolese Visual Artist</title>
-	<meta name="description" content="Explore the world of Kabeya Ilunga, a Congolese hyperrealist artist blending African culture and modernity. Powerful portraits, Multi exhibitions, and a social mission.">
-	
-	<!-- Open Graph (Facebook, LinkedIn, etc.) -->
-	<meta property="og:title" content="Kabeya Ilunga - Congolese visual Artist">
-	<meta property="og:description" content="Discover the art of Kabeya Ilunga, where African traditions meet contemporary expression.">
-	<meta property="og:image" content="https://www.kabeyailunga.com/images/works/authenticity1.webp">
-	<meta property="og:url" content="https://www.kabeyailunga.com">
+	<!-- SEO -->
+	<meta name="description" content="Explore the works of Kabeya Ilunga, an afrocentric hyperrealist artist based in East Africa. View artworks, exhibitions, and photography rooted in African identity and visual storytelling.">
+	<meta name="author" content="Kabeya Ilunga">
+	<meta name="robots" content="index, follow">
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:title" content="Gallery | Kabeya Ilunga">
+	<meta property="og:description" content="Explore Kabeya Ilunga's latest artworks, exhibitions and afrocentric portraits.">
+	<meta property="og:image" content="https://www.kabeyailunga.com/images/frame-about1.webp">
+	<meta property="og:url" content="https://www.kabeyailunga.com/gallery.html">
 	<meta property="og:type" content="website">
-	
-	<!-- Twitter -->
+
+	<!-- Twitter Card -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="Kabeya Ilunga - Congolese visual Artist">
-	<meta name="twitter:description" content="Explore the visual and cultural universe of Kabeya Ilunga.">
-	<meta name="twitter:image" content="https://www.kabeyailunga.com/images/works/authenticity1.webp">
-	
-	<!-- SEO BALISES  -->
-	<!-- 	informer google que je suis un artiste  -->
-	<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Person",
-  "name": "Kabeya Ilunga",
-  "image": "https://www.kabeyailunga.com/images/frame-about1.webp",
-  "jobTitle": "Artiste visuel congolais",
-  "url": "https://www.kabeyailunga.com",
-  "sameAs": [
-    "https://www.instagram.com/kabeya_ilunga",
-    "https://www.linkedin.com/in/kabeya-ilunga/"
-  ]
-}
-</script>
+	<meta name="twitter:title" content="Gallery | Kabeya Ilunga">
+	<meta name="twitter:description" content="Explore Kabeya Ilunga's latest artworks, exhibitions and afrocentric portraits.">
+	<meta name="twitter:image" content="https://www.kabeyailunga.com/images/frame-about1.webp">
+	<!-- SEO END -->
 
-<!-- 	informer google que je suis un artiste  -->
-
-	<link rel="shortcut icon" href="./images/favicon.png" type="image/png">
-	<link rel="icon" href="./images/favicon.png" type="image/png">
+	<link rel="shortcut icon" href="images/favicon.png" type="image/png">
+	<link rel="icon" href="images/favicon.png" type="image/png">
 
 	<link rel="stylesheet" href="css/swiper-bundle.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
@@ -66,190 +40,44 @@
 <div class="menu-overlay"></div>
 
 <main class="main">
+	<section class="gallery">
+		<!-- ... contenu sidebar et navigation inchangé ... -->
 
-	<div class="home def-row">
+		<div class="content-page gallery-content gallery-wrap">
+			<div class="content-inner">
 
-		<div class="sidebar">
-	<div class="menu-wrap">
-		<a href="index.html" class="sidebar-logo">
-			<img src="images/logo.png"  alt="kabeya logo">
-		</a>
-		<nav class="menu-nav">
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html">About me</a></li>
-				<li><a href="gallery.html">Gallery</a></li>
-				<li><a href="contact.html">Contact</a></li>
-			</ul>
-
-			<div class="menu-contacts">
-				<a href="tel:+243975072724" class="menu-contacts__item">
-					<span class="menu-contacts__icon">
-						<i class="fa fa-phone-square"></i>
-					</span>
-					<p>+243 975072724</p>
-				</a>
-
-				<a href="mailto:studio@kabeyailunga.com" class="menu-contacts__item">
-					<span class="menu-contacts__icon">
-						<i class="fa fa-envelope"></i>
-					</span>
-					<p>studio@kabeyailunga.com</p>
-				</a>
-
-				<div class="menu-social">
-					<a href="https://www.instagram.com/ilunga_kabeya/" target="_blank" class="menu-social__item">
-						<i class="fa fa-instagram"></i>
-					</a>
-					<a href="https://wa.me/+243975072724" target="_blank" class="menu-social__item">
-						<i class="fa fa-whatsapp"></i>
-					</a>
-
-					<a href="https://www.linkedin.com/in/kabeya-ilunga/" target="_blank" class="menu-social__item">
-						<i class="fa fa-linkedin"></i>
-					</a>
+				<div class="title-wrapper text-center">
+					<h2 class="title">Gallery</h2>
+					<div class="subtitle">
+						<p>
+							In this portfolio I present some works from my first series "Afrocentrik"
+							which is a celebration of African identity.
+						</p>
+					</div>
 				</div>
-			</div>
-			<div class="menu-close__wrap">
-				<a href="#" class="menu-close"><img style="transform: rotate(180deg);" src="images/arrow-right.svg" alt=""></a>
-			</div>
-		</nav>
-	</div>
 
-	<a href="index.html" class="logo" id="mainLogo">
-		<img src="images/logo.png" alt="">
-	</a>
+				<div class="album-tab">
+					<a href="#album-animals" class="is-active">Works</a>
+					<a href="#album-nature">Pics</a>
+					<a href="#album-portraits">Exhibitions</a>
+				</div>
 
-	<a href="#" class="hamburger-button">
-		<span></span>
-		<span></span>
-		<span></span>
-	</a>
-</div>
+				<!-- Albums dynamiques chargés par JS -->
+				<div class="grid-album is-active" id="album-animals"></div>
+				<div class="grid-album" id="album-nature"></div>
+				<div class="grid-album" id="album-portraits"></div>
+				<div class="grid-album" id="album-kids"></div>
 
-		<div class="prelodaer-wrap">
-			<div class="preloader-item">
-				<img src="images/logo.png" id="logo-sized" alt="Preloader">
 			</div>
 		</div>
-
-		<div class="content home-content">
-
-			<div class="swiper swiper-banner">
-				<div class="swiper-wrapper">
-
-					<!-- Slide START -->
-					<div class="swiper-slide animeslide-slide">
-						<div class="banner-item" style="background-image: url(images/frame-banner4.webp);">
-							<div class="banner-content">
-								<div class="banner-title-mini" data-animate="bottom">Afrocentrik</div>
-								<h1 class="h1 banner-title" data-animate="bottom">Reclaiming the beauty and strength of African cultures</h1>
-								<div class="banner-desc" data-animate="bottom">
-									<p>
-										Afrocentrik series exemplifies this approach: fifteen portraits that
-										blend hyperrealism, ancestral symbols, ritual ornaments, and geometric
-										abstraction.
-									</p>
-								</div>
-								<div class="banner-btn" data-animate="bottom">
-									<a class="link-portfolio" href="gallery.html">
-										Show portfolio
-										<img src="images/arrow-right.svg" alt="">
-										<span class="right-border"></span>
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-					<!-- Slide END -->
-
-					<!-- Slide START -->
-					<div class="swiper-slide animeslide-slide">
-						<div class="banner-item" style="background-image: url(images/frame-banner1.webp);">
-							<div class="banner-content">
-								<div class="banner-title-mini" data-animate="bottom">Authenticity</div>
-								<h1 class="h1 banner-title" data-animate="bottom">An Afrocentric journey through memory, art and history</h1>
-								<div class="banner-desc" data-animate="bottom">
-									<p>Immerse yourself in the artistry of portraiture with my curated collection. From evocative glances to powerful expressions, these portraits capture the essence of individuals in moments frozen in time.</p>
-								</div>
-								<div class="banner-btn" data-animate="bottom">
-									<a class="link-portfolio" href="gallery.html">
-										Show portfolio
-										<img src="images/arrow-right.svg" alt="">
-										<span class="right-border"></span>
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-					<!-- Slide END -->
-
-					<!-- Slide START -->
-					<div class="swiper-slide animeslide-slide">
-						<div class="banner-item" style="background-image: url(images/frame-banner2.webp);">
-							<div class="banner-content">
-								<div class="banner-title-mini" data-animate="bottom">Beauty</div>
-								<h1 class="h1 banner-title" data-animate="bottom">Capturing Timeless Moments with Grace and Beauty</h1>
-								<div class="banner-desc" data-animate="bottom">
-									<p>
-										Powerful and intimate, each piece of Afrocentrik reflects a personal and universal quest, 
-										recalling the importance of our roots and heritage
-									</p>
-								</div>
-								<div class="banner-btn" data-animate="bottom">
-									<a class="link-portfolio" href="gallery.html">
-										Show portfolio
-										<img src="images/arrow-right.svg" alt="">
-										<span class="right-border"></span>
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-					<!-- Slide END -->
-
-					<!-- Slide START -->
-					<div class="swiper-slide animeslide-slide">
-						<div class="banner-item" style="background-image: url(images/frame-banner3.webp);">
-							<div class="banner-content">
-								<div class="banner-title-mini" data-animate="bottom">Cultures</div>
-								<h1 class="h1 banner-title" data-animate="bottom">Telling African stories through eyes, scars and symbols</h1>
-								<div class="banner-desc" data-animate="bottom">
-									<p>
-										This series is part of an artistic approach that seeks to raise
-										awareness, inspire and enhance the beauty and identity of Africa in a modern multicultural context where
-										we feel like we are lost in Western cultural influence.
-
-									</p>
-								</div>
-								<div class="banner-btn" data-animate="bottom">
-									<a class="link-portfolio" href="gallery.html">
-										Show portfolio
-										<img src="images/arrow-right.svg" alt="">
-										<span class="right-border"></span>
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-					<!-- Slide END -->
-					
-				</div>
-				
-				<div class="banner-nav-wrap">
-					<div class="swiper-button-prev"></div>
-					<div class="swiper-scrollbar"></div>
-					<div class="swiper-button-next"></div>
-				</div>
-			</div><!-- end swiper-banner -->
-			
-		</div><!-- end home-content -->
-
-	</div><!-- end home -->
-
- 
+	</section>
 </main>
 
+<footer class="site-footer">
+	<div class="footer-copyright">
+		© 2025 <strong>Kabeya Ilunga</strong>. All rights reserved.
+	</div>
+</footer>
 
 <script src="js/jquery-3.7.0.min.js"></script>
 <script src="js/swiper-bundle.min.js"></script>
@@ -260,5 +88,7 @@
 <script src="js/blazy.min.js"></script>
 <script src="js/parazoom.min.js"></script>
 <script src="js/script.js"></script>
+<!-- Script pour remplir les albums dynamiquement -->
+<script src="js/gallery.js"></script>
 </body>
 </html>
